[tool.poetry]
name = "coronaupdates"
version = "0.1.0"
description = ""
authors = ["thearjun <mailarjunadhikari@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
bs4 = "^0.0.1"
requests = "^2.23.0"
pandas = "0.25.3"
lxml = "^4.6.2"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
autopep8 = "^1.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
